# ros2_pm_robot_control

./: README.md
livecycle_example/: CMakeLists.txt  package.xml
livecycle_example/launch/: spawn_object.launch.py
livecycle_example/livecycle_example/: spawn_object_service_client.py  spawn_object_tf.py
livecycle_example/src/: spawn_object_in_moveit.cpp
object_spawner_manager/: CMakeLists.txt  README.md  package.xml
object_spawner_manager/launch/: object_spawner.launch.py
object_spawner_manager/object_spawner_manager/: Calling_services_testing.ipynb  assembly_instruction_tests.json  object_spawner_manager.py  pm_demo.ipynb  spawn_object_tf.py
object_spawner_manager/object_spawner_manager/submodules/: object_spawner_classes.py
object_spawner_manager/src/: spawn_object_in_moveit.cpp  spawn_object_in_moveit_V.cpp
pm_moveit_interfaces/: CMakeLists.txt
pm_moveit_interfaces/srv/: MoveCam1TcpRelative.srv  MoveLaserTcpTo.srv  MoveRelative.srv  MoveToFrame.srv  MoveToPose.srv  MoveToolTcpRelative.srv  MoveToolTcpTo.srv
pm_moveit_server/: CMakeLists.txt  README.md  package.xml
pm_moveit_server/launch/: pm_moveit_server.launch.py
pm_moveit_server/src/: pm_moveit_server.cpp
spawn_object/: CMakeLists.txt  package.xml
spawn_object/launch/: spawn_object.launch.py
spawn_object/spawn_object/: spawn_object_tf.py
spawn_object_interfaces/: CMakeLists.txt  package.xml
spawn_object_interfaces/msg/: AssemblyInstruction.msg  Object.msg  ObjectMsg.msg  ObjectScene.msg  Plane.msg
spawn_object_interfaces/srv/: ChangeParentFrame.srv  CreateRefFrame.srv  SpawnObject.srv
